[package]
name = "pg_bigdecimal"
description = "Postgres' numeric <=> Rust's BigDecimal"
version = "0.1.2"
authors = ["Rick Klomp <rick.klomp@tzconnect.com>"]
edition = "2018"
license = "MIT"
keywords = ["postgres", "pg", "numeric", "bigdecimal"]
categories = ["database"]
include = ["/src", "/test_with_tempdb.bash"]
publish = true

[dependencies]
bytes = "1.1.0"
bigdecimal = "0.3.0"
byteorder = "1.4.3"
num = "0.4"
postgres = "0.19.1"
serde = { version = "1.0.125", optional = true }
